Fix inconsistent spacing in `pre` tags

--- a/app/static/css/wiki.css
+++ b/app/static/css/wiki.css
@@ -237,6 +237,10 @@
     border: 1px solid #aaa;
 }
 
+.wiki-content pre {
+    margin-bottom: 0;
+}
+
 .wiki-categories table {
     border-collapse: separate;
     margin-bottom: 0;
